# cmgr

./: .gitignore  README.md  pyproject.toml
src/cmgr/: __init__.py  commands.py  config.py  main.py  utils.py
