[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
	{name = "Christopher Fore", email = "csfore@posteo.net"},
]
name = "cmgr"
dynamic = ["version"]
description = "Chroot Manager"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPLv3"}
dependencies = [
	"click",
]

[project.scripts]
cmgr = "cmgr.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cmgr = ["*.bash"]

[tool.setuptools.dynamic]
version = {attr = "cmgr.__version__"}
